force-app/main/default/objects/Grant_Solicitation__c/Grant_Solicitation__c.object-meta.xml
<CustomObject>
    <label>Grant/Solicitation</label>
    <nameField>
        <label>Grant/Solicitation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Solicitation</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>