force-app/main/default/objects/Grant_Solicitation__c/fields/Activity_ID__c.field-meta.xml
<CustomField>
    <fullName>Activity_ID__c</fullName>
    <label>Activity ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>