force-app/main/default/objects/Grant_Solicitation__c/fields/Additional_CC_Emails_on_Contract_Summary__c.field-meta.xml
<CustomField>
    <fullName>Additional_CC_Emails_on_Contract_Summary__c</fullName>
    <description>S-00403: Additional CC Emails on Contract Summary (comma separated): List of emails to CC on Contract  Summary email from Batch.</description>
    <label>Additional CC Emails on Contract Summary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>