force-app/main/default/objects/Grant_Solicitation__c/fields/Additional_CC_Emails_on_Invoice_Summary__c.field-meta.xml
<CustomField>
    <fullName>Additional_CC_Emails_on_Invoice_Summary__c</fullName>
    <description>Additional CC Emails on Invoice Summary (comma separated): List of emails to CC on Invoice Summary email from Batch.</description>
    <inlineHelpText>Additional CC Emails on Invoice Summary (comma separated): List of emails to CC on Invoice Summary email from Batch.</inlineHelpText>
    <label>Additional CC Emails on Invoice Summary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>