force-app/main/default/objects/Grant_Solicitation__c/fields/Agreement_Code__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Code__c</fullName>
    <label>Agreement Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>