force-app/main/default/objects/Grant_Solicitation__c/fields/Allow_Multiple_Invoices__c.field-meta.xml
<CustomField>
    <fullName>Allow_Multiple_Invoices__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Allow Multiple Invoices</label>
    <type>Checkbox</type>
</CustomField>