force-app/main/default/objects/Grant_Solicitation__c/fields/Anticipated_Term_Over_A_Year__c.field-meta.xml
<CustomField>
    <fullName>Anticipated_Term_Over_A_Year__c</fullName>
    <label>Anticipated Term &gt; 1 yr?</label>
    <length>10</length>
    <type>Text</type>
</CustomField>