force-app/main/default/objects/Grant_Solicitation__c/fields/ApproveInspectionMilestone__c.field-meta.xml
<CustomField>
    <fullName>ApproveInspectionMilestone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approve Inspection Milestone</label>
    <type>Checkbox</type>
</CustomField>