force-app/main/default/objects/Grant_Solicitation__c/fields/Associate_Contacts__c.field-meta.xml
<CustomField>
    <fullName>Associate_Contacts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Associate Contacts</label>
    <type>Checkbox</type>
</CustomField>