force-app/main/default/objects/Grant_Solicitation__c/fields/Auto_Close_Project_on_PO_Close__c.field-meta.xml
<CustomField>
    <fullName>Auto_Close_Project_on_PO_Close__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Flag to Auto Close Project on PO Close</description>
    <inlineHelpText>Flag to Auto Close Project on PO Close</inlineHelpText>
    <label>Auto Close Project on PO Close</label>
    <type>Checkbox</type>
</CustomField>