force-app/main/default/objects/Grant_Solicitation__c/fields/Automatically_Approve_Invoices_submitted__c.field-meta.xml
<CustomField>
    <fullName>Automatically_Approve_Invoices_submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Automatically Approve Invoices submitted by NYSERDA PM. Works on Core_Milestone_Invoice_Page
SF-30358</description>
    <inlineHelpText>Automatically Approve Invoices submitted by NYSERDA PM. If the current user is the NYSERDA PM on the project and they submit, the invoice will automatically go to Approved status and be sent to Finance. Only works for Core_Milestone_Invoice_Page</inlineHelpText>
    <label>Auto Approve Invoices submitted_PM</label>
    <type>Checkbox</type>
</CustomField>