force-app/main/default/objects/Grant_Solicitation__c/fields/Automatically_generate_Incentive_Funding__c.field-meta.xml
<CustomField>
    <fullName>Automatically_generate_Incentive_Funding__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this on Incentive Voucher Programs so that the Project Incentive Funding Source will be added automatically.</description>
    <inlineHelpText>Check this on Incentive Voucher Programs so that the Project Incentive Funding Source will be added automatically and the invoice will have the correct funding fields.</inlineHelpText>
    <label>Automatically generate Incentive Funding</label>
    <type>Checkbox</type>
</CustomField>