force-app/main/default/objects/Grant_Solicitation__c/fields/Can_Use_Batch_Processing_for_Contracts__c.field-meta.xml
<CustomField>
    <fullName>Can_Use_Batch_Processing_for_Contracts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Can Use Batch Processing for Contracts?: Batch Will pick only the Records which are flagged with this field i.e. eligible for High Volume Processing.</description>
    <label>Can Use Batch Processing for Contracts?</label>
    <type>Checkbox</type>
</CustomField>