force-app/main/default/objects/Grant_Solicitation__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PGRM</fullName>
            </value>
            <value>
                <fullName>P2</fullName>
            </value>
            <value>
                <fullName>PCMT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>