force-app/main/default/objects/Grant_Solicitation__c/fields/Cert_Statement_for_Energy_Consultant__c.field-meta.xml
<CustomField>
    <fullName>Cert_Statement_for_Energy_Consultant__c</fullName>
    <label>Cert Statement for Energy Consultant</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>