force-app/main/default/objects/Grant_Solicitation__c/fields/Certification_Statement_for_Payee__c.field-meta.xml
<CustomField>
    <fullName>Certification_Statement_for_Payee__c</fullName>
    <label>Cert Statement for Other Roles</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>