force-app/main/default/objects/Grant_Solicitation__c/fields/Certification_Statement_for_Tenant__c.field-meta.xml
<CustomField>
    <fullName>Certification_Statement_for_Tenant__c</fullName>
    <label>Certification Statement for Tenant</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>