force-app/main/default/objects/Grant_Solicitation__c/fields/Concept_Paper__c.field-meta.xml
<CustomField>
    <fullName>Concept_Paper__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box to require an accepted concept paper as a prerequisite to proposal submission.</inlineHelpText>
    <label>Concept Paper?</label>
    <type>Checkbox</type>
</CustomField>