force-app/main/default/objects/Grant_Solicitation__c/fields/Concept_Paper_Pass_Score__c.field-meta.xml
<CustomField>
    <fullName>Concept_Paper_Pass_Score__c</fullName>
    <inlineHelpText>Minimum average score required for a Concept Paper according to the scoring rubric.</inlineHelpText>
    <label>Concept Paper Threshold</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>