force-app/main/default/objects/Grant_Solicitation__c/fields/Concept_Paper_Scoring_Committee_Reminder__c.field-meta.xml
<CustomField>
    <fullName>Concept_Paper_Scoring_Committee_Reminder__c</fullName>
    <defaultValue>false</defaultValue>
    <description>S-00724: When set to true from false, will invoke the reminder calculations.</description>
    <label>Concept Paper Scoring Committee Reminder</label>
    <type>Checkbox</type>
</CustomField>