force-app/main/default/objects/Grant_Solicitation__c/fields/Concept_Paper_Upload_Document__c.field-meta.xml
<CustomField>
    <fullName>Concept_Paper_Upload_Document__c</fullName>
    <description>T-02462/T-02793: Rollup all validations onto Solicitation level</description>
    <formula>Total_Documents_for_Submission_Concept__c &gt; 0</formula>
    <label>Concept Paper Upload Document?</label>
    <type>Checkbox</type>
</CustomField>