force-app/main/default/objects/Grant_Solicitation__c/fields/Contract_Generation_Email__c.field-meta.xml
<CustomField>
    <fullName>Contract_Generation_Email__c</fullName>
    <description>00012965/T-02462: Rollup all validations onto Solicitation level</description>
    <formula>NOT(ISBLANK( Contracts_Designee_Email__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Generation Email?</label>
    <type>Checkbox</type>
</CustomField>