force-app/main/default/objects/Grant_Solicitation__c/fields/Contract_Line_FieldSet_API_Name_for_CSV__c.field-meta.xml
<CustomField>
    <fullName>Contract_Line_FieldSet_API_Name_for_CSV__c</fullName>
    <defaultValue>&quot;Core&quot;</defaultValue>
    <description>S-00403: Contract Line FieldSet API Name for CSV</description>
    <label>Contract Line FieldSet API Name for CSV</label>
    <length>255</length>
    <type>Text</type>
</CustomField>