force-app/main/default/objects/Grant_Solicitation__c/fields/Contract_Summary_Email_Template_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Contract_Summary_Email_Template_API_Name__c</fullName>
    <defaultValue>&quot;CORE_Email_Contracts_CSV_to_NEIS&quot;</defaultValue>
    <description>S-00403: Email Template API Name for the content to be sent with NIES Contracts</description>
    <label>Contract Summary Email Template API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>