force-app/main/default/objects/Grant_Solicitation__c/fields/Contractor_App_Submission_Message__c.field-meta.xml
<CustomField>
    <fullName>Contractor_App_Submission_Message__c</fullName>
    <label>Contractor App Submission Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>