force-app/main/default/objects/Grant_Solicitation__c/fields/Contractor_Label__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Label__c</fullName>
    <label>Contractor Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>