force-app/main/default/objects/Grant_Solicitation__c/fields/Contracts_Designee_Email__c.field-meta.xml
<CustomField>
    <fullName>Contracts_Designee_Email__c</fullName>
    <description>Contracts Designee Email: Email where the Contract Extractor batch will send csv file. [ S-00403 ]</description>
    <label>Contracts Designee Email</label>
    <type>Email</type>
</CustomField>