force-app/main/default/objects/Grant_Solicitation__c/fields/Current_Concept_Paper_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Concept_Paper_Due_Date__c</fullName>
    <description>Concept Paper Due date from current open solicitation round.</description>
    <inlineHelpText>Concept Paper Due date from current open solicitation round. If this is a concept paper solicitation and this date is reached, the solicitation status will go to Closed on this date.</inlineHelpText>
    <label>Current Concept Paper Due Date</label>
    <summarizedField>Grant_Solicitation_Rounds__c.Concept_Paper_Due_Date__c</summarizedField>
    <summaryFilterItems>
        <field>Grant_Solicitation_Rounds__c.Status__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </summaryFilterItems>
    <summaryForeignKey>Grant_Solicitation_Rounds__c.Solicitation__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>