force-app/main/default/objects/Grant_Solicitation__c/fields/Current_Concept_Paper_Review_Status__c.field-meta.xml
<CustomField>
    <fullName>Current_Concept_Paper_Review_Status__c</fullName>
    <label>Current Concept Paper Review Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>