force-app/main/default/objects/Grant_Solicitation__c/fields/Current_Proposal_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Proposal_Due_Date__c</fullName>
    <description>Proposal Due date from current open solicitation round.</description>
    <inlineHelpText>Proposal Due date from current open solicitation round. This is when the solicitation will move from Open to Closed.</inlineHelpText>
    <label>Current Proposal Due Date</label>
    <summarizedField>Grant_Solicitation_Rounds__c.Due_Date__c</summarizedField>
    <summaryFilterItems>
        <field>Grant_Solicitation_Rounds__c.Status__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </summaryFilterItems>
    <summaryForeignKey>Grant_Solicitation_Rounds__c.Solicitation__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>