force-app/main/default/objects/Grant_Solicitation__c/fields/Current_Proposal_Review_Status__c.field-meta.xml
<CustomField>
    <fullName>Current_Proposal_Review_Status__c</fullName>
    <label>Current Proposal Review Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>