force-app/main/default/objects/Grant_Solicitation__c/fields/Current_Scoring_Committee_Meeting_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Scoring_Committee_Meeting_Date__c</fullName>
    <description>Scoring committee meeting date from current open solicitation round.</description>
    <inlineHelpText>Scoring committee meeting date from current open solicitation round.</inlineHelpText>
    <label>Current Scoring Committee Meeting Date</label>
    <summarizedField>Grant_Solicitation_Rounds__c.Scoring_Committee_Date__c</summarizedField>
    <summaryFilterItems>
        <field>Grant_Solicitation_Rounds__c.Status__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </summaryFilterItems>
    <summaryForeignKey>Grant_Solicitation_Rounds__c.Solicitation__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>