force-app/main/default/objects/Grant_Solicitation__c/fields/Customer_Authorization_Release_Energy__c.field-meta.xml
<CustomField>
    <fullName>Customer_Authorization_Release_Energy__c</fullName>
    <label>Customer Authorization Release-Energy</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>