force-app/main/default/objects/Grant_Solicitation__c/fields/Customer_Authorization_Release_Fuel__c.field-meta.xml
<CustomField>
    <fullName>Customer_Authorization_Release_Fuel__c</fullName>
    <label>Customer Authorization Release-Fuel</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>