force-app/main/default/objects/Grant_Solicitation__c/fields/Default__c.field-meta.xml
<CustomField>
    <fullName>Default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SF-30606: Send to Finance behavior for Salesforce Project Invoices without Solicitation record</description>
    <label>Default</label>
    <type>Checkbox</type>
</CustomField>