force-app/main/default/objects/Grant_Solicitation__c/fields/Default_Budget_Type__c.field-meta.xml
<CustomField>
    <fullName>Default_Budget_Type__c</fullName>
    <description>Add for WFD</description>
    <inlineHelpText>This will default the budget type on each project to this value.</inlineHelpText>
    <label>Default Budget Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Milestone</fullName>
            </value>
            <value>
                <fullName>T&amp;M</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>