force-app/main/default/objects/Grant_Solicitation__c/fields/Default_Project_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Default_Project_Coordinator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Project Coordinator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Program_Versions</relationshipName>
    <type>Lookup</type>
</CustomField>