force-app/main/default/objects/Grant_Solicitation__c/fields/Default_Project_Manager__c.field-meta.xml
<CustomField>
    <fullName>Default_Project_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This user will be assigned to a NYSERDA Project Manager role when the status = &apos;Submitted&apos;</inlineHelpText>
    <label>Default Project Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Solicitation</relationshipName>
    <type>Lookup</type>
</CustomField>