force-app/main/default/objects/Grant_Solicitation__c/fields/Default_State_Disable_Mode__c.field-meta.xml
<CustomField>
    <fullName>Default_State_Disable_Mode__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Default State Disable Mode</label>
    <type>Checkbox</type>
</CustomField>