force-app/main/default/objects/Grant_Solicitation__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>S-00704: Description text for Solicitation.</description>
    <inlineHelpText>Description of this solicitation. This field will be displayed on the Current Funding Opportunities &apos;Solicitation Detail&apos; page.</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>