force-app/main/default/objects/Grant_Solicitation__c/fields/Display_Instructions_and_Portal_Guide__c.field-meta.xml
<CustomField>
    <fullName>Display_Instructions_and_Portal_Guide__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if Portal Submission Instructions should be displayed underneath the &apos;Apply Online&apos; link on the Funding Opportunity detail page.</inlineHelpText>
    <label>Display Instructions and Portal Guide</label>
    <type>Checkbox</type>
</CustomField>