force-app/main/default/objects/Grant_Solicitation__c/fields/Do_not_create_contact_and_account__c.field-meta.xml
<CustomField>
    <fullName>Do_not_create_contact_and_account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do not create contact and account</label>
    <type>Checkbox</type>
</CustomField>