force-app/main/default/objects/Grant_Solicitation__c/fields/Do_not_create_contracts_on_submission__c.field-meta.xml
<CustomField>
    <fullName>Do_not_create_contracts_on_submission__c</fullName>
    <defaultValue>false</defaultValue>
    <description>I-03711: Do not Create Contracts on submission - if checked- code will not create contracts on submission. 
Default value - unchecked</description>
    <inlineHelpText>Do not Create Contracts on submission: if checked- code will not create contracts on submission. 
Default value - unchecked</inlineHelpText>
    <label>Do not create contracts on submission</label>
    <type>Checkbox</type>
</CustomField>