force-app/main/default/objects/Grant_Solicitation__c/fields/Do_Not_Display_Budget_Fields__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Display_Budget_Fields__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Display Budget Fields</label>
    <type>Checkbox</type>
</CustomField>