force-app/main/default/objects/Grant_Solicitation__c/fields/Document_Acknowledge_Summary__c.field-meta.xml
<CustomField>
    <fullName>Document_Acknowledge_Summary__c</fullName>
    <label>Document Acknowledge Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>