force-app/main/default/objects/Grant_Solicitation__c/fields/Docusign_Signatory__c.field-meta.xml
<CustomField>
    <fullName>Docusign_Signatory__c</fullName>
    <label>Docusign Signatory</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Contractor</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>