force-app/main/default/objects/Grant_Solicitation__c/fields/DollarsPerW__c.field-meta.xml
<CustomField>
    <fullName>DollarsPerW__c</fullName>
    <label>$/W</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>