force-app/main/default/objects/Grant_Solicitation__c/fields/Electronic_Signature_Only__c.field-meta.xml
<CustomField>
    <fullName>Electronic_Signature_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, the ability to upload a paper copy of the signed application will not show on the generic application review page.(Generic_APPINTAKE_Review_Page)</description>
    <inlineHelpText>If checked, the ability to upload a paper copy of the signed application will not show on the generic application review page.</inlineHelpText>
    <label>Electronic Signature Only</label>
    <type>Checkbox</type>
</CustomField>