force-app/main/default/objects/Grant_Solicitation__c/fields/Email_Templates__c.field-meta.xml
<CustomField>
    <fullName>Email_Templates__c</fullName>
    <description>If Manual is chosen, then do not send emails when a proposal is awarded or non-awarded. If Standard, then send email as it currently does. The field is used in the workflow conditional formulas.</description>
    <inlineHelpText>If Manual is chosen, then do not send emails when a proposal is awarded or non-awarded. If Standard, then send email as it currently does.</inlineHelpText>
    <label>Email Templates</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
                <default>true</default>
                <label>Standard</label>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>