force-app/main/default/objects/Grant_Solicitation__c/fields/Enable_Cost_Share__c.field-meta.xml
<CustomField>
    <fullName>Enable_Cost_Share__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Cost Share</label>
    <type>Checkbox</type>
</CustomField>