force-app/main/default/objects/Grant_Solicitation__c/fields/Enable_Milestone_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Enable_Milestone_Quantity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Milestone Quantity</label>
    <type>Checkbox</type>
</CustomField>