force-app/main/default/objects/Grant_Solicitation__c/fields/Enable_Task_Limit__c.field-meta.xml
<CustomField>
    <fullName>Enable_Task_Limit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Task Limit</label>
    <type>Checkbox</type>
</CustomField>