force-app/main/default/objects/Grant_Solicitation__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>The end of the proposal submission period.</description>
    <inlineHelpText>The end of the proposal submission period. This field is used to move solicitations onto the closed funding opportunity page after this date (not at 3PM since there is no time on this field).</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>