force-app/main/default/objects/Grant_Solicitation__c/fields/End_User_Types__c.field-meta.xml
<CustomField>
    <fullName>End_User_Types__c</fullName>
    <defaultValue>false</defaultValue>
    <label>End-User Types</label>
    <type>Checkbox</type>
</CustomField>