force-app/main/default/objects/Grant_Solicitation__c/fields/Energy_Storage_Activity_ID__c.field-meta.xml
<CustomField>
    <fullName>Energy_Storage_Activity_ID__c</fullName>
    <defaultValue>&quot;LIRES&quot;</defaultValue>
    <description>SF-27715</description>
    <label>Energy Storage Activity ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>