force-app/main/default/objects/Grant_Solicitation__c/fields/Energy_Storage_Project_ID__c.field-meta.xml
<CustomField>
    <fullName>Energy_Storage_Project_ID__c</fullName>
    <defaultValue>&quot;005679&quot;</defaultValue>
    <description>SF-27715</description>
    <label>Energy Storage Project ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>