force-app/main/default/objects/Grant_Solicitation__c/fields/Energy_System_Classification__c.field-meta.xml
<CustomField>
    <fullName>Energy_System_Classification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Energy System Classification</label>
    <type>Checkbox</type>
</CustomField>