force-app/main/default/objects/Grant_Solicitation__c/fields/Energy_System_Classification_Default__c.field-meta.xml
<CustomField>
    <fullName>Energy_System_Classification_Default__c</fullName>
    <label>Energy System Classification - Default</label>
    <length>255</length>
    <type>Text</type>
</CustomField>