force-app/main/default/objects/Grant_Solicitation__c/fields/Enforce_Relationships__c.field-meta.xml
<CustomField>
    <fullName>Enforce_Relationships__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if Contractors/Builders may only select other Contractors/Builders they have an established relationship with during Application Intake.  Leaving it unchecked allows selection of any Contractor/Builder that does business with the program.</inlineHelpText>
    <label>Enforce Relationships</label>
    <type>Checkbox</type>
</CustomField>